--- a/src/components/css/layout.css
+++ b/src/components/css/layout.css
@@ -60,17 +60,17 @@ template {
   display: none;
 }
 a {
-  color: #8b1f2f;
+  color: #000;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
   text-shadow: none;
   background-image: none;
+  transition: 0.3s ease-in-out;
 }
 a:active,
 a:hover {
-  color: #a51e25;
+  color: #a52800;
   outline-width: 0;
-  transition: 0.3s ease-in-out;
   text-decoration: none;
 }
 abbr[title] {
