--- a/src/components/css/layout.css
+++ b/src/components/css/layout.css
@@ -134,6 +134,8 @@ img {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  will-change: unset;
+  opacity: 1;
 }
 svg:not(:root) {
   overflow: hidden;
