--- a/src/components/css/layout.css
+++ b/src/components/css/layout.css
@@ -134,8 +134,8 @@ img {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  will-change: unset;
-  opacity: 1;
+  will-change: unset !important;
+  opacity: 1 !important;
 }
 svg:not(:root) {
   overflow: hidden;
